[package]
name = "dusk"
version = "0.1.0"
authors = ["Luracasmus"]
edition = "2021"
rust-version = "1.75.0"
description = "A small, intuitive video editor in Rust"
repository = "https://github.com/Luracasmus/dusk"
keywords = ["ffmpeg", "video", "editor"]
categories = [
	"rendering",
	"multimedia",
	"multimedia::video",
	# "multimedia::audio",
	# "multimedia::images",
	# "multimedia::encoding",
	# "encoding"
]
build = "build.rs"

[dependencies]
bytemuck = "1.14.1"
emath = "0.25.0"
ffmpeg-sidecar = "0.5.1"
rayon = "1.8.1"
rayon-macro = "0.2.0"
rfd = "0.13.0"
tiny-skia = { version = "0.11.2", default-features = false, features = ["std", "simd"] } # Disable png-format
#tiny-skia = { git = "https://github.com/Luracasmus/tiny-skia.git", default-features = false, features = ["std", "simd"] } # Disable png-format

[build-dependencies]
embed-manifest = "1.4.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
softbuffer = { version = "0.4.1", default-features = false }
winit = { version = "0.29.10", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_os = "linux")'.dependencies]
softbuffer = "0.4.1"
winit = "0.29.10"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = "symbols"
codegen-units = 1
